--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "firebase": "^9.12.1",
     "jquery": "^3.6.1",
     "material-icons": "^1.12.0",
