--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^9.12.1",
     "jquery": "^3.6.1",
     "material-icons": "^1.12.0",
+    "mdb-angular-ui-kit": "^3.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
