--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@popperjs/core": "^2.11.6",
+    "@types/w3c-image-capture": "^1.0.7",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "firebase": "^9.12.1",
     "jquery": "^3.6.1",
     "material-icons": "^1.12.0",
     "rxjs": "~7.5.0",
+    "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
