--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@popperjs/core": "^2.11.6",
-    "angularx-qrcode": "^14.0.0",
     "@types/w3c-image-capture": "^1.0.7",
+    "angularx-qrcode": "^14.0.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "firebase": "^9.12.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.1",
     "material-icons": "^1.12.0",
     "mdb-angular-ui-kit": "^3.0.0",
+    "ng-swipe": "^2.0.1",
     "rxjs": "~7.5.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
@@ -48,6 +50,7 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
+    "angular-swipe": "^0.4.0",
     "eslint": "^8.23.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
