--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.2.11",
     "@angular/cdk": "^14.2.6",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
+    "@angular/common": "^14.2.11",
+    "@angular/compiler": "^14.2.11",
+    "@angular/core": "^14.2.11",
     "@angular/fire": "^7.4.1",
-    "@angular/forms": "^14.2.0",
+    "@angular/forms": "^14.2.11",
     "@angular/material": "^14.2.6",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/platform-browser": "^14.2.11",
+    "@angular/platform-browser-dynamic": "^14.2.11",
+    "@angular/router": "^14.2.11",
+    "@angular/service-worker": "^14.2.11",
     "@popperjs/core": "^2.11.6",
     "@types/w3c-image-capture": "^1.0.7",
     "@zxing/browser": "^0.1.1",
@@ -40,14 +41,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular-devkit/build-angular": "^14.2.9",
     "@angular-eslint/builder": "14.1.2",
     "@angular-eslint/eslint-plugin": "14.1.2",
     "@angular-eslint/eslint-plugin-template": "14.1.2",
     "@angular-eslint/schematics": "14.1.2",
     "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "~14.2.5",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular/cli": "~14.2.9",
+    "@angular/compiler-cli": "^14.2.11",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
