--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@egjs/hammerjs": "^2.0.17",
     "@popperjs/core": "^2.11.6",
     "@types/w3c-image-capture": "^1.0.7",
+    "angular-hammer": "^2.2.0",
     "angularx-qrcode": "^14.0.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
