--- a/package.json
+++ b/package.json
@@ -23,13 +23,11 @@
     "@angular/platform-browser-dynamic": "^14.2.11",
     "@angular/router": "^14.2.11",
     "@angular/service-worker": "^14.2.11",
-    "@egjs/hammerjs": "^2.0.17",
     "@popperjs/core": "^2.11.6",
     "@types/w3c-image-capture": "^1.0.7",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
     "@zxing/ngx-scanner": "^3.6.2",
-    "angular-hammer": "^2.1.10",
     "angularx-qrcode": "^14.0.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
@@ -38,7 +36,6 @@
     "jquery": "^3.6.1",
     "material-icons": "^1.12.0",
     "mdb-angular-ui-kit": "^3.0.0",
-    "ng-swipe": "^2.0.1",
     "rxjs": "~7.5.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
@@ -53,10 +50,10 @@
     "@angular-eslint/template-parser": "14.1.2",
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.11",
+    "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
-    "angular-swipe": "^0.2.0",
     "eslint": "^8.23.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
