--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "@types/w3c-image-capture": "^1.0.7",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
-    "@zxing/ngx-scanner": "^3.6.2",
     "angularx-qrcode": "^14.0.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "firebase": "^9.12.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.1",
+    "m": "^1.8.4",
     "material-icons": "^1.12.0",
     "mdb-angular-ui-kit": "^3.0.0",
+    "ngx-scanner-qrcode": "^1.0.25",
     "rxjs": "~7.5.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
