--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "m": "^1.8.4",
     "material-icons": "^1.12.0",
     "mdb-angular-ui-kit": "^3.0.0",
-    "ngx-scanner-qrcode": "^1.0.25",
+    "ngx-scanner-qrcode": "1.0.25",
     "rxjs": "~7.5.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
